; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_gpu-delay.c_gpu_delay_filter_tick.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_gpu-delay.c_gpu_delay_filter_tick.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpu_delay_filter_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, float)* @gpu_delay_filter_tick to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gpu_delay_filter_tick(i8* %0, float %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca float, align 4
  %5 = alloca %struct.gpu_delay_filter_data*, align 8
  store i8* %0, i8** %3, align 8
  store float %1, float* %4, align 4
  %6 = load float, float* %4, align 4
  %7 = call i32 @UNUSED_PARAMETER(float %6)
  %8 = load i8*, i8** %3, align 8
  %9 = bitcast i8* %8 to %struct.gpu_delay_filter_data*
  store %struct.gpu_delay_filter_data* %9, %struct.gpu_delay_filter_data** %5, align 8
  %10 = load %struct.gpu_delay_filter_data*, %struct.gpu_delay_filter_data** %5, align 8
  %11 = getelementptr inbounds %struct.gpu_delay_filter_data, %struct.gpu_delay_filter_data* %10, i32 0, i32 0
  store i32 0, i32* %11, align 4
  %12 = load %struct.gpu_delay_filter_data*, %struct.gpu_delay_filter_data** %5, align 8
  %13 = call i64 @check_size(%struct.gpu_delay_filter_data* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %2
  br label %19

16:                                               ; preds = %2
  %17 = load %struct.gpu_delay_filter_data*, %struct.gpu_delay_filter_data** %5, align 8
  %18 = call i32 @check_interval(%struct.gpu_delay_filter_data* %17)
  br label %19

19:                                               ; preds = %16, %15
  ret void
}

declare dso_local i32 @UNUSED_PARAMETER(float) #1

declare dso_local i64 @check_size(%struct.gpu_delay_filter_data*) #1

declare dso_local i32 @check_interval(%struct.gpu_delay_filter_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
